06/22/2004  version 0.2 pre9    Ian Lewis <IanLewis@member.fsf.org>

    * Fixed a bug that caused the right hand text pane to clear when trying to
      edit using it. When dragging and dropping a node the node stays selected
      but is not highlighted however. This may be confusing to users.

06/18/2004  version 0.2 pre8    Ian Lewis <IanLewis@member.fsf.org>

    * Made some changes to make the DefaultView less dependent on jsXe classes

06/12/2004  version 0.2 pre7    Ian Lewis <IanLewis@member.fsf.org>

    * Removed references to the TabbedView and most jsXe application references.
    * Fixed a bug that causing jsXe to not update the title properly when a
      document was closed.

06/08/2004  version 0.2 pre6    Ian Lewis <IanLewis@member.fsf.org>

    * Fixed a bug that caused a null pointer exception when reloading an
      untitled document.
    * Changed the DocumentView interface to return a Component via a
      method call instead of having it extend JPanel
    * Fixed a bug that caused ArrayOutOfBounds exceptions to be thrown
      sometimes when adding nodes via the JTree in DefaultView

05/30/2004  version 0.2 pre5    Ian Lewis <IanLewis@member.fsf.org>

    * Removed references to the DocumentBuffer class in the DocumentView 
      classes.

05/26/2004  version 0.2 pre4    Ian Lewis <IanLewis@member.fsf.org>

    * Removed redundant call to fireNameChanged() in DocumentBuffer
    * Moved code for setting the divider location of the split panes to an
      overridden version of setVisible(). This allows the DefaultView to set
      the divider locations after the parent container is made visible.

05/23/2004  version 0.2 pre4    Ian Lewis <IanLewis@member.fsf.org>

    * Allowed users to add a comment node to the document root.
    * fixed a bug that caused a processing instruction to not be printed on a
      new line when serialized.

05/23/2004  version 0.2 pre3    Ian Lewis <IanLewis@member.fsf.org>
